--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-native-firebase/app": "^15.4.0",
+    "@react-native-firebase/auth": "^15.4.0",
     "@react-navigation/native": "^6.0.11",
     "@react-navigation/native-stack": "^6.7.0",
     "@reduxjs/toolkit": "^1.8.5",
+    "add": "^2.0.6",
     "axios": "^0.27.2",
     "react": "18.0.0",
     "react-native": "0.69.4",
